[package]
name = "terra-moon-forever-locking-contract"
version = "0.1.0"
authors = ["CEO of Mirror"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
chrono = { version = "0.4" }
cosmwasm-std = { version = "0.16.2", feature = ["iterator"] }
cosmwasm-storage = { version = "0.16.0" }
cw-storage-plus = "0.9.1"
cw2 = "0.9.1"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
terra-cosmwasm = { version = "2.2.0" }
thiserror = { version = "1.0.26" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }